Proyecto2/k8s/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: proyecto2
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Desactiva redirección a HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.34.122.73.35.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
